# chat-bi

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
dataset/: 会员商业数据DDL.sql  会员商业数据问答SQL.sql  天气数据DDL.sql  天气数据问答SQL.sql  机场静态资源数据DDL.sql  航班数据DDL.sql  航班数据问答SQL.sql  问题清单.json  黄金问答对.json
docker/: .env.example
docker/config/: mysql.conf  redis.conf
docker/init/mysql/: init.sql
docs/: 00笔记.md  01需求调研.md  02市场需求文档(MRD).md  03产品需求文档(PRD).md  04架构设计.md  05技术方案.md  05流程图.md  06技术选型.md  07意图理解.md  08数据检索.md
scripts/: init_db.py
src/api/: __init__.py
src/core/: __init__.py  executor.py
src/db/: __init__.py
src/llm/: __init__.py
src/rag/: __init__.py  retriever.py
src/sql/: __init__.py
src/text2sql/: __init__.py  main.py
src/text2sql/api/routes/: __init__.py
src/text2sql/core/: generator.py  intent.py  validator.py
src/text2sql/utils/: config.py  logger.py
src/utils/: __init__.py
tasks/: todo.md
tests/test_api/: __init__.py
tests/test_core/: __init__.py
tests/test_rag/: __init__.py
