[project]
name = "text2sql-aviation"
version = "0.1.0"
description = "民航机场 ChatBI 智能商业分析系统"
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    # 核心框架
    "langgraph>=1.0.8",
    "langchain>=1.2.9",
    "langchain-community>=0.4.1",

    # LLM
    "ollama>=0.4.5",

    # Web框架
    "fastapi>=0.128.5",
    "uvicorn[standard]>=0.40.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",

    # 数据库
    "sqlalchemy>=2.0.46",
    "pymysql>=1.1.2",
    "aiomysql>=0.3.2",

    # RAG
    "chromadb>=1.4.1",
    "sentence-transformers>=5.2.2",

    # SQL处理
    "sqlglot>=28.10.0",

    # 工具
    "loguru>=0.7.3",
    "python-dotenv>=1.2.1",
    "rich>=14.3.2",

    # 测试
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.0",
    "mypy>=1.19.1",
    "ipython>=9.10.0",
]

monitoring = [
    "langfuse>=3.13.0",
    "prometheus-client>=0.24.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
